# asrlab

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  plot_mixture.py
Sheet 6/example-setup/: recognize-pruned.sh
Sheet 6/example-setup/artifacts/: README.md  graph.dot
Sheet 6/example-setup/example-setup/: recognize.sh
Sheet 6/rasr/: Makefile  Options.make
Sheet 6/rasr/scripts/: log.py
Sheet 6/rasr/src/Am/: AcousticModel.cc  AcousticModel.hh  AcousticModelAdaptor.cc  AcousticModelAdaptor.hh  AdaptationTree.cc  AdaptationTree.hh  AdaptedAcousticModel.cc  AdaptedAcousticModel.hh  ClassicAcousticModel.cc  ClassicAcousticModel.hh  ClassicDecisionTree.cc  ClassicDecisionTree.hh  ClassicHmmTopologySet.cc  ClassicHmmTopologySet.hh  ClassicStateModel.cc  ClassicStateModel.hh  ClassicStateTying.cc  ClassicStateTying.hh  ClassicTransducerBuilder.cc  ClassicTransducerBuilder.hh  DecisionTreeStateTying.cc  DecisionTreeStateTying.hh  HmmTopologySet.hh  HmmTopologySetParser.cc  HmmTopologySetParser.hh  Module.cc  Module.hh  StateModel.cc  StateModel.hh  TransitionModel.cc  TransitionModel.hh  Utilities.cc  Utilities.hh  check.cc
Sheet 6/rasr/src/Audio/: Module.cc  Module.hh  Node.cc  Node.hh  Raw.cc  Raw.hh  Wav.cc  Wav.hh  check.cc
Sheet 6/rasr/src/Bliss/: CorpusDescription.cc  CorpusDescription.hh  CorpusKey.cc  CorpusKey.hh  CorpusParser.cc  CorpusParser.hh  Evaluation.cc  (+29 more)
artifacts/: Mixture_global_pooling_3_split_4_est.txt  Mixture_mix_pooling_3_split_4_est.txt  Mixture_no_pooling_3_split_4_est.txt  README.md  alignment.dump  am_score.py  energies.pgm  features.data  plot_mixture.py  plot_nn.py  plot_prior.py  plot_pruning_scores.py  prior.data  pruning_stat.txt  recognized_on_thresholds.txt  spectrum.pgm  spectrum_25105405.pgm  spectrum_values.txt
config/: extract_wsj.config  train_400_tanh_400_relu.json  train_demo_corpus.config  train_nn.config  train_nn.json
corpora/: corpus_test_500.json  demo_corpus_single.json
data/audio/: .gitignore
data/features/: .gitignore  plot.py
examples/config/gmm/: recog.config  train.config
examples/config/lexica/: initial.lex
examples/config/nn/: prior.config  recog.config  train.config
examples/logs/nn/: nn_stats
models/400_tanh_400_relu/: ff1  ff2  output
src/: Alignment.cpp  Config.cpp  Config.hpp  Corpus.cpp  Corpus.hpp  FeedForwardLayer.cpp  FeedForwardLayer.hpp  Lexicon.cpp  Lexicon.hpp  LinAlg.cpp  LinAlg.h  Makefile  MarkovAutomaton.hpp  Mixtures.cpp  Mixtures.hpp  NNTraining.cpp  NNTraining.hpp  NetworkLayer.cpp  NetworkLayer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  OutputLayer.cpp  OutputLayer.hpp  Recognizer.cpp  Recognizer.hpp  SignalAnalysis.cpp  SignalAnalysis.hpp  Training.cpp  Training.hpp  Types.cpp  Types.h  Types.hpp  main.cpp
src/pgm/: Matrix.cpp  Matrix.hpp  PGM.cpp  PGM.hpp  Section.cpp  Section.hpp
src/test/: CMakeLists.txt  test2.cpp  test3.cpp  test4.cpp
(+901 files in other folders)
